fixing vertical alignment of home text on ipad

--- a/src/home/home.module.css
+++ b/src/home/home.module.css
@@ -921,6 +921,24 @@ div .headline {
 }
 
 /* Adjusting height of header and header decription */
+@media only screen and (max-width: 1366px) {
+  div .headline {
+    top: 28%;
+  }
+}
+
+@media only screen and (max-width: 1112px) {
+  div .headline {
+    top: 28%;
+  }
+}
+
+@media only screen and (max-width: 782px) {
+  div .headline {
+    top: -1%;
+  }
+}
+
 @media only screen and (max-width: 736px) {
   .contain {
     height: 150vh;
@@ -930,12 +948,18 @@ div .headline {
     top: 50%;
   }
 }
+@media only screen and (max-width: 678px) {
+  div .headline {
+    top: 90%;
+  }
+}
 
 @media only screen and (max-width: 667px) {
   div .headline {
     top: 50%;
   }
 }
+
 @media only screen and (max-width: 568px) {
   div .headline {
     top: 40%;
